Added Main page Features
Added:
- Buttons
- Alignment

Improved:
- General Layout
- Spacing

Todo:
- All Size Compatible
- Add Comments

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -42,8 +42,8 @@
         <!--A Logo that works with the host name and a fitting icon -->
         <img id="index_introduction_logo" src="../Resources/Logo.png" />
         <ul id="index_introduction_menu">
-          <li>Sign In</li>
-          <li>Contact Us</li>
+          <li id="index_into_men">Sign In</li>
+          <li id="index_into_men">Contact Us</li>
         </ul>
       </section>
       <!--Seach Feature-->
@@ -56,6 +56,23 @@
           type="text"
           placeholder="Eg. Hand Sanitizer "
         />
+      </section>
+      <!--Buttons for further navigation-->
+      <section id="index_buttons">
+        <ul>
+          <li id="index_btn">
+            Menu
+          </li>
+          <li id="index_btn">
+            Shop
+          </li>
+          <li id="index_btn">
+            Upgrade
+          </li>
+          <li id="index_btn">
+            Help
+          </li>
+        </ul>
       </section>
     </section>
   </body>
