General Folder Rearangements

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html lang="en">
   <head>
     <!--Linking CSS code in styles folder which is one folder back and located in the styles folder-->
-    <link rel="stylesheet" href="../styles/mainUI_Style.css" />
+    <link rel="stylesheet" href="/styles/mainUI_Style.css" />
 
     <!--START FONTS IMPORT-->
     <link
@@ -32,15 +32,15 @@
     <section id="introduction">
       <!--We want all images to be stored under resources, this file can be expanded
       as time goes on, make sure all image names changes as well-->
-      <img id="index_introduction_image" src="../Resources/background.jfif" />
+      <img id="index_introduction_image" src="/Resources/background.jfif" />
       <!--Now that we added an image, we need to place text and buttons on it-->
       <section id="index_introduction_top">
         <!--Creating a future link for the burger menu-->
         <a href="www.google.com">
-          <img id="index_introduction_burger" src="../Resources/burger.png" />
+          <img id="index_introduction_burger" src="/Resources/burger.png" />
         </a>
         <!--A Logo that works with the host name and a fitting icon -->
-        <img id="index_introduction_logo" src="../Resources/Logo.png" />
+        <img id="index_introduction_logo" src="/Resources/Logo.png" />
         <ul id="index_introduction_menu">
           <li id="index_into_men">Sign In</li>
           <li id="index_into_men">Contact Us</li>
