Added Javascript Code
-  Example Animation Shuffle
-  Search database (Google) (TODO BASIC)
- Search Animation

- Improved User Interface

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
       <section id="index_search">
         <label id="index_main_lable">Sales Forcasting</label>
 
-        <a href="#"> <label id="index_seach_lable">SEARCH</label></a>
+        <a onclick="searchDatabase()">
+          <label id="index_seach_lable">SEARCH</label></a
+        >
         <input
           id="index_search_input"
           type="text"
@@ -85,4 +87,6 @@
       </section>
     </section>
   </body>
+  <!--Linking JS Code in JS Folder-->
+  <script type="text/javascript" src="/js/main.js"></script>
 </html>
