--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html lang="en">
   <head>
     <!--Linking CSS code in styles folder which is one folder back and located in the styles folder-->
-    <link rel="stylesheet" href="/styles/mainUI_Style.css" />
+    <link rel="stylesheet" href="styles/mainUI_Style.css" />
 
     <!--START FONTS IMPORT-->
     <link
@@ -36,11 +36,11 @@
       <section id="index_introduction_top">
         <!--Creating a future link for the burger menu-->
         <a href="www.google.com">
-          <img id="index_introduction_burger" src="/Resources/burger.png" />
+          <img id="index_introduction_burger" src="Resources/burger.png" />
         </a>
         <!--A Logo that works with the host name and a fitting icon -->
         <a href="https://www.jaxifysoftware.com"
-          ><img id="index_introduction_logo" src="/Resources/Logo.png"
+          ><img id="index_introduction_logo" src="Resources/Logo.png"
         /></a>
         <ul id="index_introduction_menu">
           <a href="#"><li id="index_into_men">Sign In</li></a>
@@ -88,5 +88,5 @@
     </section>
   </body>
   <!--Linking JS Code in JS Folder-->
-  <script type="text/javascript" src="/js/main.js"></script>
+  <script type="text/javascript" src="js/main.js"></script>
 </html>
