--- a/contact_us.html
+++ b/contact_us.html
@@ -1,11 +1,73 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
 	<title>Sales Forcasting - Contact Us</title>
-	 <link rel="stylesheet" href="styles/contact_usUI_Style.css" />
+	<link rel="stylesheet" href="styles/contact_usUI_Style.css" />
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 </head>
 <body>
+
+	<section id="index_introduction_top">			
+			
+			
+			<img id="index_introduction_logo" src="Resources/Logo.png" />
+		
+
+			<ul id="index_introduction_menu">
+				<a href="https://www.jaxifysoftware.com"> <li id="main_menu">Main Menu</li> </a>
+				
+			</ul>
+	</section>
 	
-</body>
-</html>
+	<section id="Information">
+			<section id="info_link_hedder">
+				<label id="index_main_lable">
+					You can contact us through
+					the following methods:
+				</label>
+			</section>
+			<section id="contactMethods">
+
+
+				<ul>
+					<a href="#">
+						<li id="info_link">Email: jaxifysoftware@gmail.com </li> <!--Email to do-->
+					</a>
+					<a href="#">
+						<li id="info_link">Customer support number: 012 395 2013</li><!--Number to do-->
+					</a>
+				</ul>
+
+
+			</section>
+
+			<section id="message_board">
+				<section id="msg_label">
+					Or message us on our message board:
+				</section>
+				<section id="msg_info">
+					Please enter and submit any complaints or remarks in the message box below and 
+					we will get back to you as swiftly as possible.
+					<br />
+					Please note, this option is only possible if you are registered and signed in.<br />
+					If you are not signed in, please use the link: <a id="sign_link" href="#"> sign in / create account</a>
+				</section>
+
+				<section id="message">
+					<a onclick="()"> <!--Submit button to do-->
+					<label id="submit_lable">Submit Message</label>
+					</a>
+
+					<input id="message_input"
+						   type="text"
+						   placeholder="Eg. Problems navigating the site " />
+				</section>
+
+				</section>
+
+		</section>
+	</body>
+
+	</html>
