--- a/contact_us.html
+++ b/contact_us.html
@@ -33,10 +33,10 @@
 
 				<ul>
 					<a href="#">
-						<li id="info_link">Email: jaxifysoftware@gmail.com </li> <!--Email to do-->
+						<li id="info_link">Email: jaxifysoftware@gmail.com </li> <!--TODO Email -->
 					</a>
 					<a href="#">
-						<li id="info_link">Customer support number: 012 395 2013</li><!--Number to do-->
+						<li id="info_link">Customer support number: 012 395 2013</li><!--TODO Number -->
 					</a>
 				</ul>
 
@@ -56,7 +56,7 @@
 				</section>
 
 				<section id="message">
-					<a onclick="()"> <!--Submit button to do-->
+					<a onclick="()"> <!--TODO Submit button-->
 					<label id="submit_lable">Submit Message</label>
 					</a>
 
