--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
           ><img id="index_introduction_logo" src="Resources/Logo.png"
         /></a>
         <ul id="index_introduction_menu">
-          <a href="#"><li id="index_into_men">Sign In</li></a>
-          <a href="#"> <li id="index_into_men">Contact Us</li></a>
+          <a href="sign_in.html"><li id="index_into_men">Sign In</li></a>
+          <a href="contact_us.html"> <li id="index_into_men">Contact Us</li></a>
         </ul>
       </section>
       <!--Seach Feature-->
