--- a/contact_us.html
+++ b/contact_us.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿<!--TODO Make the website actually look good-->
+<!DOCTYPE html>
 <html>
   <head>
     <title>Sales Forcasting - Contact Us</title>
@@ -16,51 +17,29 @@
     </section>
 
     <section id="Information">
-      <section id="info_link_hedder">
-        <label id="index_main_lable">
-          You can contact us through the following methods:
-        </label>
-      </section>
-      <section id="contactMethods">
-        <ul>
-          <a href="#">
-            <li id="info_link">Email: jaxifysoftware@gmail.com</li>
-            <!--TODO Email -->
-          </a>
-          <a href="#">
-            <li id="info_link">Customer support number: 012 395 2013</li>
-            <!--TODO Number -->
-          </a>
-        </ul>
-      </section>
+      <img src="Resources/help_page_user_main.png" id="HelpfullUser" />
+      <textarea id="chatbot_responce" rows="4" cols="50" wrap="soft" readonly>
+Welcome To The Sales Forcasting Help Section!
+I'm Here To Assist You!</textarea
+      >
 
-      <section id="message_board">
-        <section id="msg_label">
-          Or message us on our message board:
-        </section>
-        <section id="msg_info">
-          Please enter and submit any complaints or remarks in the message box
-          below and we will get back to you as swiftly as possible.
-          <br />
-          Please note, this option is only possible if you are registered and
-          signed in.<br />
-          If you are not signed in, please use the link:
-          <a id="sign_link" href="#"> sign in / create account</a>
-        </section>
+      <label id="index_main_lable">
+        What do you Need Help With?
+      </label>
+      <textarea id="chatbot" rows="4" cols="50" wrap="soft">
+I Need Help With:
 
-        <section id="message">
-          <a onclick="()">
-            <!--TODO Submit button-->
-            <label id="submit_lable">Submit Message</label>
-          </a>
+- Making this page look good
 
-          <input
-            id="message_input"
-            type="text"
-            placeholder="Eg. Problems navigating the site "
-          />
-        </section>
-      </section>
+- [Version 0.0.1] Proof of concept
+
+- TODO - Provide Contact Information & Make it mobile compatible</textarea
+      >
+      <!--Chatbot V0.1 - BETA-->
+    </section>
+    <h1>OR</h1>
+    <section id="btn_pos">
+      <button id="contact_btn">Request Assistance Via Email</button>
     </section>
   </body>
 </html>
