--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <section id="index_search">
         <label id="index_main_lable">Sales Forcasting</label>
 
-        <a onclick="searchDatabase()" href="search_results.html">
+        <a onclick="update()" href="search_results.html">
           <label id="index_seach_lable">SEARCH</label></a
         >
         <input
