--- a/forget_password.html
+++ b/forget_password.html
@@ -5,5 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
+
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/7.14.0/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+   https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="https://www.gstatic.com/firebasejs/7.14.0/firebase-analytics.js"></script>
+
+  <script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+      apiKey: "AIzaSyA3G8meYatHgI-5KXPFkZYkACV7ULwkV30",
+      authDomain: "sales-forecasting-prj251.firebaseapp.com",
+      databaseURL: "https://sales-forecasting-prj251.firebaseio.com",
+      projectId: "sales-forecasting-prj251",
+      storageBucket: "sales-forecasting-prj251.appspot.com",
+      messagingSenderId: "872303846348",
+      appId: "1:872303846348:web:fcc611f0f93d75abcbf369",
+      measurementId: "G-KS26CVC8Y2",
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+  </script>
   <body></body>
 </html>
