--- a/contact_us.html
+++ b/contact_us.html
@@ -1,24 +1,28 @@
 ﻿<!--TODO Make the website actually look good-->
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>Sales Forcasting - Contact Us</title>
     <link rel="stylesheet" href="styles/contact_usUI_Style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  </head>
-  <body>
-    <section id="index_introduction_top">
-      <img id="index_introduction_logo" src="Resources/Logo.png" />
+</head>
 
-      <ul id="index_introduction_menu">
-        <a href="index.html"> <li id="main_menu">Home</li> </a>
-      </ul>
+<body>
+    <section id="index_introduction_top">
+        <img id="index_introduction_logo" src="Resources/Logo.webp" />
+
+        <ul id="index_introduction_menu">
+            <a href="index.html">
+                <li id="main_menu">Home</li>
+            </a>
+        </ul>
     </section>
 
     <section id="Information">
-      <img src="Resources/help_page_user_main.png" id="HelpfullUser" />
-      <textarea id="chatbot_responce" rows="4" cols="50" wrap="soft" readonly>
+        <img src="Resources/help_page_user_main.webp" id="HelpfullUser" />
+        <textarea id="chatbot_responce" rows="4" cols="50" wrap="soft" readonly>
 Welcome To The Sales Forcasting Help Section!
 I'm Here To Assist You!</textarea
       >
