--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <img id="index_introduction_burger" src="Resources/burger.png" />
             </a>
             <!--A Logo that works with the host name and a fitting icon -->
-            <a href="https://www.jaxifysoftware.com"><img id="index_introduction_logo" src="Resources/Logo.webp" /></a>
+            <a href="https://www.jaxifysoftware.com"><img id="index_introduction_logo" src="Resources/Logo.webpl,o']" /></a>
             <ul id="index_introduction_menu">
                 <a href="sign_in.html">
                     <li id="index_into_men">Sign In</li>
@@ -87,22 +87,23 @@
     <script src="https://www.gstatic.com/firebasejs/7.14.0/firebase-analytics.js"></script>
 
     <script>
-      // Your web app's Firebase configuration
-      var firebaseConfig = {
-        apiKey: "AIzaSyA3G8meYatHgI-5KXPFkZYkACV7ULwkV30",
-        authDomain: "sales-forecasting-prj251.firebaseapp.com",
-        databaseURL: "https://sales-forecasting-prj251.firebaseio.com",
-        projectId: "sales-forecasting-prj251",
-        storageBucket: "sales-forecasting-prj251.appspot.com",
-        messagingSenderId: "872303846348",
-        appId: "1:872303846348:web:fcc611f0f93d75abcbf369",
-        measurementId: "G-KS26CVC8Y2",
-      };
-      // Initialize Firebase
-      firebase.initializeApp(firebaseConfig);
-      firebase.analytics();
+        // Your web app's Firebase configuration
+        var firebaseConfig = {
+            apiKey: "AIzaSyA3G8meYatHgI-5KXPFkZYkACV7ULwkV30",
+            authDomain: "sales-forecasting-prj251.firebaseapp.com",
+            databaseURL: "https://sales-forecasting-prj251.firebaseio.com",
+            projectId: "sales-forecasting-prj251",
+            storageBucket: "sales-forecasting-prj251.appspot.com",
+            messagingSenderId: "872303846348",
+            appId: "1:872303846348:web:fcc611f0f93d75abcbf369",
+            measurementId: "G-KS26CVC8Y2",
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        firebase.analytics();
     </script>
-  </body>
-  <!--Linking JS Code in JS Folder-->
-  <script type="text/javascript" src="js/main.js"></script>
+</body>
+<!--Linking JS Code in JS Folder-->
+<script type="text/javascript" src="js/main.js"></script>
+
 </html>
