--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <img id="index_introduction_burger" src="Resources/burger.png" />
             </a>
             <!--A Logo that works with the host name and a fitting icon -->
-            <a href="https://www.jaxifysoftware.com"><img id="index_introduction_logo" src="Resources/Logo.webpl,o']" /></a>
+            <a href="https://www.jaxifysoftware.com"><img id="index_introduction_logo" src="Resources/Logo.webp" /></a>
             <ul id="index_introduction_menu">
                 <a href="sign_in.html">
                     <li id="index_into_men">Sign In</li>
@@ -66,9 +66,9 @@
                         Documentation
                     </li>
                 </a>
-                <a href="#">
+                <a href="developers.html">
                     <li id="index_btn">
-                        Upgrade
+                        Developers
                     </li>
                 </a>
                 <a href="#">
