--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
                     </li>
                 </a>
                 <a href="developers.html">
+                    <!--Dev-->
                     <li id="index_btn">
                         Developers
+                        <!--Dev-->
                     </li>
                 </a>
                 <a href="#">
