--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
     <!--END FONTS IMPORT-->
 
     <!--Default Code & To be changed later when we expand device compatibility-->
+    <meta name="description" content="Forecast Sales Grow Your Business" />
+    <meta name="robots" content="Sales Forecasting, Sales Prediction, Product Forecasting, Product Prediction" />
+    <meta name="googlebot" content="Sales Forecasting, Sales Prediction, Product Forecasting, Product Prediction" />
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <!--Title of the website (text in tab)-->
     <title>Jaxify Software - Sales Forcasting</title>
 </head>
