--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </a>
                 <a href="#">
                     <li id="index_btn">
-                        Documentation
+                        Store
                     </li>
                 </a>
                 <a href="developers.html">
