--- a/sign_in.html
+++ b/sign_in.html
@@ -28,7 +28,7 @@
             </section>
 
             <section id="info_list_item">
-                <input id="client_info" type="password" placeholder="Password" />
+                <input id="client_info1" type="password" placeholder="Password" />
             </section>
         </ul>
     </section>
@@ -76,5 +76,5 @@
         firebase.analytics();
     </script>
 </body>
-
+<script> type="text/javascript" ;src= "js/sign_in.js" </script>
 </html>
