--- a/sign_in.html
+++ b/sign_in.html
@@ -76,5 +76,5 @@
         firebase.analytics();
     </script>
 </body>
-<script> type="text/javascript" ;src= "js/sign_in.js" </script>
+<script> type="text/javascript" ;src= "js/auth.js" </script>
 </html>
