Added Layout to the Help Page

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <!--Dev-->
                     </li>
                 </a>
-                <a href="#">
+                <a href="help.html">
                     <li id="index_btn">
                         Help
                     </li>
