Added body Class for help page

--- a/help.html
+++ b/help.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="styles/mainUI_Style.css" />
         <title>Help</title>
     </head>
-    <body>
+    <body class="helpBody">
     <h1>Example (How to seach)</h1>
     <p>Discryption of how the client will use the search feature</p>
     <h1>Example (How to Buy)</h1>
