Fixed Spelling Mistakes & Styling Mistakes

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 </head>
 
 <body>
+    <p style="color: red; text-align: center; position: absolute;">
+        [2 May 2020] PLEASE NOTE - THIS WEBSITE IS CURRENTLY UNDER DEVELOPMENT BY A TEAM OF 5 STUDENTS AT BELGIUM CAMPUS ITVERSITY, NOTHING IS FINAL AND THERE WILL BE WIP ALL OVER THE WEBSITE
+    </p>
     <!--Creating various sections of the website, we want the website to be
     modern looking with sections from top to bottom, we want everything looking polished
     and proffesional -->
