--- a/help.html
+++ b/help.html
@@ -1,17 +1,23 @@
 <html>
-    <head>
-        <!--Linking CSS code in styles folder which is one folder back and located in the styles folder-->
-        <link rel="stylesheet" href="styles/mainUI_Style.css" />
-        <title>Help</title>
-    </head>
-    <body class="helpBody">
-    <h1>Example (How to seach)</h1>
-    <p>Discryption of how the client will use the search feature</p>
+
+<head>
+    <!--Linking CSS code in styles folder which is one folder back and located in the styles folder-->
+    <link rel="stylesheet" href="styles/helpUI_Style.css" />
+    <title>Help</title>
+</head>
+
+<body class="helpBody">
+    <p style="color: red; text-align: center;">
+        [2 May 2020] PLEASE NOTE - THIS WEBSITE IS CURRENTLY UNDER DEVELOPMENT BY A TEAM OF 5 STUDENTS AT BELGIUM CAMPUS ITVERSITY, NOTHING IS FINAL AND THERE WILL BE WIP ALL OVER THE WEBSITE
+    </p>
+    <h1>Example (How to Search)</h1>
+    <p>Discription of how the client will use the search feature</p>
     <h1>Example (How to Buy)</h1>
-    <p>Discryption of how the client will Buy</p>
-    <h1>Example (What to do if you forgot your Password)</h1>
-    <p>Discryption of how the client will Buy</p>
-    <h1>Example (Any other feacher you might have a problem with)</h1>
-    <p>Discryption of how the client will Buy</p>
-    </body>
+    <p>Discription of how the client will Buy</p>
+    <h1>Example (What to do if you forget your password)</h1>
+    <p>Discription of how the client will Buy</p>
+    <h1>Example (Any other features you might have a problem with)</h1>
+    <p>Discription of how the client will Buy</p>
+</body>
+
 </html>
