sign in conflict

--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
     <!--END FONTS IMPORT-->
 
     <!--Default Code & To be changed later when we expand device compatibility-->
+    <meta name="description" content="Forecast Sales Grow Your Business" />
+    <meta name="robots" content="Sales Forecasting, Sales Prediction, Product Forecasting, Product Prediction" />
+    <meta name="googlebot" content="Sales Forecasting, Sales Prediction, Product Forecasting, Product Prediction" />
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <!--Title of the website (text in tab)-->
     <title>Jaxify Software - Sales Forcasting</title>
 </head>
@@ -35,7 +38,7 @@
                 <img id="index_introduction_burger" src="Resources/burger.png" />
             </a>
             <!--A Logo that works with the host name and a fitting icon -->
-            <a href="https://www.jaxifysoftware.com"><img id="index_introduction_logo" src="Resources/Logo.webpl,o']" /></a>
+            <a href="https://www.jaxifysoftware.com"><img id="index_introduction_logo" src="Resources/Logo.webp" /></a>
             <ul id="index_introduction_menu">
                 <a href="sign_in.html">
                     <li id="index_into_men">Sign In</li>
@@ -63,12 +66,14 @@
                 </a>
                 <a href="#">
                     <li id="index_btn">
-                        Documentation
+                        Store
                     </li>
                 </a>
-                <a href="#">
+                <a href="developers.html">
+                    <!--Dev-->
                     <li id="index_btn">
-                        Upgrade
+                        Developers
+                        <!--Dev-->
                     </li>
                 </a>
                 <a href="#">
