--- a/html/membership.html
+++ b/html/membership.html
@@ -38,7 +38,8 @@
 <!--creating the VIP membership-->
 <section>
  <h1>VIP Membership</h1>  
-
+ <p>Gives you the following:</p>
+<br>
  <p>Unlimited searches per month.</p>
  <p>Unlimited storage for your search results.</p>
  <p>On hand assistance with problems and queries.</p>
