--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         Profile
                     </li>
                 </a>
-                <a href="#">
+                <a href="membership.html">
                     <li id="index_btn">
                         Store
                     </li>
