Updated the base plate of Jaxify Software

--- a/Sales_Forecasting/contact_us.html
+++ b/Sales_Forecasting/contact_us.html
@@ -14,7 +14,7 @@
         <img id="index_introduction_logo" src="Resources/Logo.webp" />
 
         <ul id="index_introduction_menu">
-            <a href="index.html">
+            <a href="home.html">
                 <li id="main_menu">Home</li>
             </a>
         </ul>
