--- a/Sales_Forecasting/membership.html
+++ b/Sales_Forecasting/membership.html
@@ -9,7 +9,7 @@
 <body>
     <img id="index_introduction_logo" src="Resources/Logo.webp" />
 
-    <a href="index.html">
+    <a href="home.html">
         <li id="main_menu">Home</li>
     </a>
 
