--- a/Sales_Forecasting/sign_in.html
+++ b/Sales_Forecasting/sign_in.html
@@ -12,7 +12,7 @@
     <section id="index_introduction_top">
         <img id="index_introduction_logo" src="Resources/Logo.webp" />
         <ul id="index_introduction_menu">
-            <a href="index.html">
+            <a href="home.html">
                 <li id="main_menu">Home</li>
             </a>
         </ul>
