--- a/index.html
+++ b/index.html
@@ -1,117 +1,139 @@
-<!--We Purchased the domain address - www.jaxifysoftware.com which will host our website-->
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <!--Linking CSS code in styles folder which is one folder back and located in the styles folder-->
-    <link rel="stylesheet" href="styles/mainUI_Style.css" />
-
-    <!--START FONTS IMPORT-->
-    <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Bellota+Text:ital,wght@0,400;1,700&family=Oswald&display=swap" rel="stylesheet" />
-
-    <!--END FONTS IMPORT-->
-
-    <!--Default Code & To be changed later when we expand device compatibility-->
-    <meta name="description" content="Forecast Sales Grow Your Business" />
-    <meta name="robots" content="Sales Forecasting, Sales Prediction, Product Forecasting, Product Prediction" />
-    <meta name="googlebot" content="Sales Forecasting, Sales Prediction, Product Forecasting, Product Prediction" />
+    <meta name="description" content="Forecast Sales - Grow Your Business" />
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--Title of the website (text in tab)-->
-    <title>Jaxify Software - Sales Forcasting</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="styling/style.css" />
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+    <title>Jaxify Software</title>
 </head>
 
 <body>
-    <p style="color: red; text-align: center; position: absolute;">
-        [2 May 2020] PLEASE NOTE - THIS WEBSITE IS CURRENTLY UNDER DEVELOPMENT BY A TEAM OF 5 STUDENTS AT BELGIUM CAMPUS ITVERSITY, NOTHING IS FINAL AND THERE WILL BE WIP ALL OVER THE WEBSITE
-    </p>
-    <!--Creating various sections of the website, we want the website to be
-    modern looking with sections from top to bottom, we want everything looking polished
-    and proffesional -->
-    <section id="introduction">
-        <!--We want all images to be stored under resources, this file can be expanded
-      as time goes on, make sure all image names changes as well-->
-        <!--Now that we added an image, we need to place text and buttons on it-->
-        <section id="index_introduction_top">
-            <!--Creating a future link for the burger menu-->
-            <a href="www.google.com">
-                <img id="index_introduction_burger" src="Resources/burger.png" />
-            </a>
-            <!--A Logo that works with the host name and a fitting icon -->
-            <a href="https://www.jaxifysoftware.com"><img id="index_introduction_logo" src="Resources/Logo.webp" /></a>
-            <ul id="index_introduction_menu">
-                <a href="sign_in.html">
-                    <li id="index_into_men">Sign In</li>
-                </a>
-                <a href="contact_us.html">
-                    <li id="index_into_men">Contact Us</li>
-                </a>
-            </ul>
-        </section>
-        <!--Seach Feature-->
-        <section id="index_search">
-            <label id="index_main_lable">Sales Forcasting</label>
-
-            <a onclick="searchDatabase()" href="search_results.html">
-                <label id="index_seach_lable">SEARCH</label></a>
-            <input id="index_search_input" type="text" placeholder="Eg. Hand Sanitizer " />
-        </section>
-        <!--Buttons for further navigation-->
-        <section id="index_buttons">
+    <header>
+        <nav>
             <ul>
-                <a href="#">
-                    <li id="index_btn">
-                        Profile
-                    </li>
-                </a>
-                <a href="membership.html">
-                    <li id="index_btn">
-                        Store
-                    </li>
-                </a>
-                <a href="developers.html">
-                    <!--Dev-->
-                    <li id="index_btn">
-                        Developers
-                        <!--Dev-->
-                    </li>
-                </a>
-                <a href="help.html">
-                    <li id="index_btn">
-                        Help
-                    </li>
-                </a>
+                <li><a href="#">Home</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#offer">What We Offer</a></li>
+                <li><a href="#slideshow">Example Software</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li>
+                    <a href="Sales_Forecasting/home.html">Sales Forecasting</a>
+                </li>
             </ul>
+        </nav>
+    </header>
+    <section>
+        <section id="main">
+
+            <h1 class="title">Jaxify Software</h1>
+            <h2>Affordable Customisable Software For Your Convenience</h2>
+            <img src="/images/back.jpg" alt="" class="mainbackground">
         </section>
-    </section>
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/7.14.0/firebase-app.js"></script>
+        <section id="about">
+            <h1 style="margin-bottom: 2%;">About Us</h1>
+            <section class="border">
+                <br />
+                <p>
+                    Jaxify Software Is A Small Private Company That Makes Professional Looking Customisable Software & Websites For Affordable Prices.
+                </p>
 
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-    <script src="https://www.gstatic.com/firebasejs/7.14.0/firebase-analytics.js"></script>
+                <p>
+                    We Have Been Active For More Than A Year Providing Different Kinds Of Service In The IT Department.
+                </p>
+                <p>
+                    Based In Pretoria, South Africa, We Work Hard To Provide Nation Wide Service.
+                </p>
+                <p>
+                    Jaxify Software Is Special Because We Care More About Our Clients Than We Care About Anything Else!
+                </p>
+                <p>
+                    Our Core Values Are That We Work Hard, Deliver Fast And We Ensure High Quality! We Keep Working Untill You Are Happy!
+                </p>
+                <p>
+                    Why Us And Not A Website Builder Or Other Competitors? We Are Less Expensive And Your Designs Can Be More Flexsable And Professional, We Don't Have Watermarks.
+                </p>
+                <br />
+            </section>
+            <section>
+                <section id="offer">
+                    <h1>What We Offer</h1>
+                    <section class="borderOffer">
+                        <br>
+                        <p>Manual Web Development</p>
+                        <br />
+                        <p>Desktop Software Development</p>
+                        <br />
+                        <p>Mobile Application Development</p>
+                        <br>
+                        <p>Automation Script Development To Save You Time & Money</p>
+                        <br>
+                        <p>Modern User Interface Designs To Suit Your Needs</p>
+                        <br />
 
-    <script>
-        // Your web app's Firebase configuration
-        var firebaseConfig = {
-            apiKey: "AIzaSyA3G8meYatHgI-5KXPFkZYkACV7ULwkV30",
-            authDomain: "sales-forecasting-prj251.firebaseapp.com",
-            databaseURL: "https://sales-forecasting-prj251.firebaseio.com",
-            projectId: "sales-forecasting-prj251",
-            storageBucket: "sales-forecasting-prj251.appspot.com",
-            messagingSenderId: "872303846348",
-            appId: "1:872303846348:web:fcc611f0f93d75abcbf369",
-            measurementId: "G-KS26CVC8Y2",
-        };
-        // Initialize Firebase
-        firebase.initializeApp(firebaseConfig);
-        firebase.analytics();
-    </script>
+                        <p>Affordable Prices For Every Type Of Software</p>
+                        <br />
+
+                        <p>Different Themes Based On Your Preference</p>
+                        <br />
+
+                    </section>
+                </section>
+                <section id="developer">
+
+                </section>
+            </section>
+        </section>
+        <section id="slideshow">
+            <h1>What We've Created</h1>
+            <br>
+            <br>
+
+            <!-- Slideshow container -->
+            <div class="slideshow-container">
+
+                <!-- Full-width images with number and caption text -->
+                <div class="mySlides fade">
+                    <div class="numbertext">1 / 3</div>
+                    <img src="slide_01.webp" style="width:100%">
+                    <div class="text">Wedding Website</div>
+                </div>
+
+                <div class="mySlides fade">
+                    <div class="numbertext">2 / 3</div>
+                    <img src="slide_02.webp" style="width:25%; height: 500px; margin-left: 40%;">
+                    <div class="text">Mobile Password Strength Analyzer</div>
+                </div>
+
+                <div class="mySlides fade">
+                    <div class="numbertext">3 / 3</div>
+                    <img src="slide_03.webp" style="width:100%">
+                    <div class="text">Desktop Electronic Voting Software</div>
+                </div>
+
+                <!-- Next and previous buttons -->
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            </div>
+            <br>
+
+            <!-- The dots/circles -->
+            <div style="text-align:center">
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
+            </div>
+            <section id="contact" style="margin-top: 3%;">
+                <h1>Contact Us</h1>
+                <br>
+                <p>Email Address - jacovanstryp@gmail.com<br></p>
+                <footer>Copyright © Jaxify Software 2020 - Daniël (Jaco) Van Stryp</footer>
+            </section>
 </body>
-<!--Linking JS Code in JS Folder-->
-<script type="text/javascript" src="js/main.js"></script>
+<script src="main.js"></script>
 
 </html>
