--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             <h1 class="title">Jaxify Software</h1>
             <h2>Affordable Customisable Software For Your Convenience</h2>
-            <img src="/images/back.jpg" alt="" class="mainbackground">
+            <img src="/images/back.webp" alt="" class="mainbackground">
         </section>
         <section id="about">
             <h1 style="margin-bottom: 2%;">About Us</h1>
