--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta name="description" content="Forecast Sales - Grow Your Business" />
+    <meta name="description" content="Get Your Software Idea Coded - Custom Website, Desktop, Mobile Development" />
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
