--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="styling/style.css" />
-    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
     <title>Jaxify Software</title>
 </head>
 
@@ -40,7 +39,7 @@
             <section class="border">
                 <br />
                 <p>
-                    Jaxify Software Is A Small Private Company That Makes Professional Looking Customisable Software & Websites For Affordable Prices.
+                    Jaxify Software Is A Company That Makes Professional Looking Customisable Software & Websites For Affordable Prices.
                 </p>
 
                 <p>
@@ -131,7 +130,10 @@
             <section id="contact" style="margin-top: 3%;">
                 <h1>Contact Us</h1>
                 <br>
-                <p>Email Address - jacovanstryp@gmail.com<br></p>
+
+                <a href="https://m.me/jaxifysoftware">
+                    <p style="color: cornflowerblue;">Email Address - jacovanstryp@gmail.com<br></p>
+                </a>
                 <footer>Copyright © Jaxify Software 2020 - Daniël (Jaco) Van Stryp</footer>
             </section>
 </body>
