--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section id="main">
 
             <h1 class="title">Jaxify Software</h1>
-            <h2>Affordable Customisable Software For Your Convenience</h2>
+            <h2>Order Custom Affordable Websites & Software For Your Convienience</h2>
             <img src="/images/back.webp" alt="" class="mainbackground">
         </section>
         <section id="about">
@@ -99,14 +99,14 @@
                 <!-- Full-width images with number and caption text -->
                 <div class="mySlides fade">
                     <div class="numbertext">1 / 3</div>
-                    <img src="slide_01.webp" style="width:100%">
-                    <div class="text">Wedding Website</div>
+                    <img src="slide_02.webp" style="width:100%">
+                    <div class="text">Sales Forecasting Website</div>
                 </div>
 
                 <div class="mySlides fade">
                     <div class="numbertext">2 / 3</div>
-                    <img src="slide_02.webp" style="width:35%; height: 500px; margin-left: 35%;">
-                    <div class="text">Mobile Password Strength Analyzer</div>
+                    <img src="slide_01.webp" style="width:100%;">
+                    <div class="text">Wedding Website</div>
                 </div>
 
                 <div class="mySlides fade">
@@ -128,15 +128,21 @@
                 <span class="dot" onclick="currentSlide(3)"></span>
             </div>
             <section id="contact" style="margin-top: 3%;">
-                <h1>Contact Us</h1>
+                <h1>Are You Interested?<br>Contact Us!</h1>
                 <br>
 
-                <a href="https://m.me/jaxifysoftware">
-                    <p style="color: cornflowerblue;">Email Address - jacovanstryp@gmail.com<br></p>
+                <h2 style="color: red;">Email Address - jacovanstryp@gmail.com<br></h2>
+
+                <a href="https://m.me/jaxifysoftware" style="text-decoration: none">
+                    <h2 style="color: green;">Chat On Messanger<br></h2>
+                </a>
+
+                <a href="https://www.linkedin.com/in/danielvanstryp/" style="text-decoration: none">
+                    <h2 style=" color: cornflowerblue; ">Developer LinkedIn Page<br></h2>
                 </a>
                 <footer>Copyright © Jaxify Software 2020 - Daniël (Jaco) Van Stryp</footer>
             </section>
 </body>
-<script src="main.js"></script>
+<script src="main.js "></script>
 
 </html>
