--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 
 <head>
-    <meta name="description" content="Get Your Software Idea Coded - Custom Website, Desktop, Mobile Development" />
+    <meta name="description" content="Get Your Software Idea Coded - Order Affordable Custom Coded Website, Desktop And Mobile Applications" />
+    <meta name="robots" content="Custom Software, Code Custom Software, Order Custom Website, Order Custom Software, Hire A Developer" />
+    <meta name="googlebot" content="Custom Software, Code Custom Software, Order Custom Website, Order Custom Software, Hire A Developer" />
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="styling/style.css" />
-    <title>Jaxify Software</title>
+    <title>Jaxify Software - Order Custom Affordable Software & Websites For Your Convienience</title>
 </head>
 
 <body>
