--- a/Sales_Forecasting/index.html
+++ b/Sales_Forecasting/index.html
@@ -40,7 +40,7 @@
             <!--A Logo that works with the host name and a fitting icon -->
             <a href="https://www.jaxifysoftware.com"><img id="index_introduction_logo" src="Resources/Logo.webp" /></a>
             <ul id="index_introduction_menu">
-                <a href="sign_in.html">
+                <a href="">
                     <li id="index_into_men_signin">Sign In</li>
                 </a>
                 <a href="contact_us.html">
